# AIR

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.airc  README.md  compose.yaml  package-lock.json  package.json
.github/workflows/: ci.yml
crates/airc/: Cargo.toml
crates/airc/runtime/linux-aarch64/: _start.S
crates/airc/runtime/linux-x86_64/: _start.S
crates/airc/src/: airb.rs  check.rs  codegen.rs  diag.rs  hash.rs  interp.rs  lib.rs  main.rs  parse.rs  sexpr.rs
docs/: ABSTRACTION.md  AIR_FORMAT.md  AI_NATIVE.md  CODEGEN.md  CONCURRENCY.md  DESIGN.md  ENCODING.md  EXAMPLES.md  OWNERSHIP.md  PHASE1_DECISIONS.md  ROADMAP.md  SUBSET.md  TOOLING.md  VISION.md
examples/: add.air  add.air.json  arr.air  arr.air.json  aset.air  aset.air.json  bad_borrow.air  bad_borrow.air.json  bad_enum_match.air  bad_enum_match.air.json  bad_move.air  bad_move.air.json  borrow_ok.air  borrow_ok.air.json  div.air  div.air.json  fset.air  fset.air.json  hello.air  hello.air.json  option.air  option.air.json  overflow.air  overflow.air.json  pair.air  pair.air.json  point.air  point.air.json  sum.air  sum.air.json
scripts/: docker.sh
tools/airc/: README.md  package.json  tsconfig.json
tools/airc/src/: ast.ts  check.ts  cli.ts  diag.ts  interp.ts  main.test.ts  main.ts  parse.test.ts  parse.ts  run.test.ts  sexpr.test.ts  sexpr.ts
