[package]
name = "airc"
description = "AIR toolchain (Rust) — parse/check/run"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "airc"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
