[package]
name = "airc"
description = "AIR toolchain (Rust) — parse/check/run/compile stub"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "airc"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"

[dev-dependencies]
