[package]
name = "airc"
description = "AIR toolchain (Rust) — parse/check/run/compile (Cranelift)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "airc"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
cranelift-codegen = "0.132.1"
cranelift-frontend = "0.132.1"
cranelift-native = "0.132.1"
cranelift-module = "0.132.1"
cranelift-jit = "0.132.1"

[dev-dependencies]
